# YOLOv8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  detector.cpp  detector.h  detector_onnxruntime.cpp  detector_onnxruntime.h  detector_opencv_dnn.cpp  detector_opencv_dnn.h  detector_tensorrt.h  detector_tensorrt_end2end.cpp  detector_tensorrt_end2end.h  main.cpp  processingthread.cpp  processingthread.h  segmentor.cpp  segmentor.h  segmentor_onnxruntime.cpp  segmentor_onnxruntime.h  segmentor_opencv_dnn.cpp  segmentor_opencv_dnn.h
ExportModels/: Export.py  ExportForTensorRT.py  ExportOnnxEnd2End.py  README.md
Infrence_CPP/: CMakeLists.txt  README.md  detector.cpp  detector.h  detector_opencv_dnn.cpp  detector_opencv_dnn.h  detector_tensorrt.cpp  detector_tensorrt.h  main.cpp  processingthread.cpp  processingthread.h
Infrence_Python/: README.md  main.py
TensorRT_EngineBuilder/: CMakeLists.txt  README.md  main.cpp
TensorRT_EngineBuilder/EngineBuilder/: enginebuilder.cpp  enginebuilder.h
TrainModels/: README.md  convertor_VGG_To_YOLOv8.py  trainYOLOv8.py
Training/: ExportForTensorRT.py  ExportModels.py  README.md  coco8-seg.yaml  trainYOLOv8.py
